--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nextjs",
+  "name": "test",
   "description": "Application utilizing Sitecore JavaScript Services and Next.js",
   "version": "21.0.8",
   "private": true,
   "config": {
-    "appName": "nextjs",
+    "appName": "test",
     "rootPlaceholders": [
       "jss-main"
     ],
